# ClickerApp

./: docker-compose.yaml  test.py  test_dj.py
.redis_data/: dump.rdb
backend/: .env  celery-entrypoint.sh  dockerfile  dockerfile.celery  dockerfile.django  entrypoint.sh  pyproject.toml  req.py
backend/core/: celery.py  settings.py  urls.py
backend/levels/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/tasks/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/users/: admin.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/users/management/commands/: create_superuser.py
backend/utils/: database_requests.py  paginators.py
nginx/: Dockerfile  nginx.conf
